--- a/styles.css
+++ b/styles.css
@@ -4317,6 +4317,14 @@ width: 583px;
     width: 303px;
     background-color: #000;
       }
+      .logo-container-footer2{
+        justify-content: flex-start;
+        display: flex;
+        flex-direction: column;
+        width: 303px;
+        background-color: #000;
+        
+      }
   .logo-container-footer img{
     width: 200px;
   }
@@ -4326,7 +4334,10 @@ width: 583px;
     font-weight: 400;
     line-height: 28px;
     color: #FFFFFF;
-   
+   justify-content: left;
+   align-items: center;
+   gap: 5px;
+   display: flex;
     width: 383px;
   }
   .footer-text1{
@@ -4373,19 +4384,27 @@ width: 583px;
         justify-content: flex-start;
         display: flex;
         flex-direction: column;
-        width: 25%;
+        width: 35%;
         background-color: #000;
           }
   }
-  @media (max-width:994px) {
+  @media (max-width:1024px) {
     .footer-component{
         width: 80%;
       gap: 40px;
         flex-wrap: wrap;
        }
+          .logo-container-footer2{
+        justify-content: flex-start;
+        display: flex;
+        flex-direction: column;
+        width: 303px;
+        background-color: #000;
+      
+      } 
        
   }
-  @media (max-width:661px) {
+  @media (max-width:801px) {
 .logo-container-footer1{
         justify-content: flex-start;
         display: flex;
@@ -4429,7 +4448,6 @@ width: 583px;
         font-size: 13px;
       }
 }
-
 /* section 1-1 */
 
 .section1-1{
@@ -5352,147 +5370,207 @@ margin-top: 10px;
     
     
     
+
+
+  .icons-container {
+    color: white;
+    /* height: 100%; */
+    /* width: 100%; */
+    /* background-color: blue; */
+    position: fixed; /* Fixes the element relative to the viewport */
+    top: 80vh; /* Optional: Ensures it starts from the top of the viewport */
+    left: 30px; /* Optional: Ensures it starts from the left of the viewport */
+    display: flex;
+    justify-content: left;
+    align-items: center;
     
-      .icons-container {
-        color: white;
-        /* height: 100%; */
-        /* width: 100%; */
-        /* background-color: blue; */
-        position: fixed; /* Fixes the element relative to the viewport */
-        top: 80vh; /* Optional: Ensures it starts from the top of the viewport */
-        left: 30px; /* Optional: Ensures it starts from the left of the viewport */
-        display: flex;
-        justify-content: left;
-        align-items: center;
+}
+
+
+/* .icons-container {
+    position: relative;
+    width: fit-content;
+} */
+
+
+.station {
+    /* position: relative; */
+  /* background-color: red; */
+}
+
+.main-icon {
+    width: 50px; /* Adjust as needed */
+    height: auto;
+    cursor: pointer;
+    padding: 10px ;
+    background: rgb(77,77,91);
+    background: linear-gradient(180deg, rgba(77,77,91,1) 32%, rgba(28,23,19,1) 91%);
+    border-radius: 10px;
+    border:1px solid red ;
+   margin-top: 5px;
+}
+
+.social-icons {
+    position: absolute;
+    bottom: 100%; /* Place icons above the main icon */
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column; /* Stack icons vertically */
+    /* align-items: center; */
+  
+   
+ 
+}
+
+
+.social-icon {
+    cursor: pointer;
+    margin-top: 5px;
+    width: 50px; /* Adjust as needed */
+    height: auto;
+    opacity: 0; 
+   
+    transition: opacity 0.3s ease, transform 0.3s ease; 
+    background: rgb(77,77,91);
+    background: linear-gradient(180deg, rgb(39, 39, 46) 32%, rgba(28,23,19,1) 91%);
+   padding: 10px ;
+   border-radius: 10px;
+   border:1px solid red ;
+}
+
+.station:hover .social-icon:nth-child(1) {
+    animation: show-icon 0.3s forwards 0.1s; /* Facebook icon */
+}
+
+.station:hover .social-icon:nth-child(2) {
+    animation: show-icon 0.3s forwards 0.1s; /* Instagram icon */
+}
+.icons-container-mobile {
+    display: none;
+}
+
+
+
+@keyframes show-icon {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+@media (max-width:453px) {
+    .icons-container {
+        left: 10px; 
         
     }
-    
-    /* .icons-container {
-        position: relative;
-        width: fit-content;
-    } */
-    
-    
-    .station {
-        /* position: relative; */
-      /* background-color: red; */
+}
+@media (max-width:1028px) {
+    .icons-container {
+        display: none;
     }
-    
-    .main-icon {
-        width: 50px; /* Adjust as needed */
-        height: auto;
-        cursor: pointer;
-        padding: 10px ;
-        background: rgb(77,77,91);
-        background: linear-gradient(180deg, rgba(77,77,91,1) 32%, rgba(28,23,19,1) 91%);
-        border-radius: 10px;
-        border:1px solid red ;
-       margin-top: 5px;
-    }
-    
-    .social-icons {
-        position: absolute;
-        bottom: 100%; /* Place icons above the main icon */
-        left: 50%;
-        transform: translateX(-50%);
+    .icons-container-mobile {
+        color: white;
+        width: 100%; 
+        height: 50px; 
+        position: fixed; 
+       
+        bottom: 0px;
+        left: 0; 
         display: flex;
-        flex-direction: column; /* Stack icons vertically */
-        /* align-items: center; */
-      
-       
-     
+        justify-content: center; 
+        align-items: center; 
+        background-color: #3c03a7; 
+        padding: 10px 20px; 
+        border: none; 
+        gap: 25px;
+        cursor: pointer; 
+        text-align: center; 
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+        transition: background-color 0.3s ease;
     }
-    
-    
-    .social-icon {
-        cursor: pointer;
-        margin-top: 5px;
-        width: 50px; /* Adjust as needed */
-        height: auto;
-        opacity: 0; 
-       
-        transition: opacity 0.3s ease, transform 0.3s ease; 
-        background: rgb(77,77,91);
-        background: linear-gradient(180deg, rgb(39, 39, 46) 32%, rgba(28,23,19,1) 91%);
-       padding: 10px ;
-       border-radius: 10px;
-       border:1px solid red ;
+    .footer-bule{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
     }
-    
-    .station:hover .social-icon:nth-child(1) {
-        animation: show-icon 0.3s forwards 0.1s; /* Facebook icon */
+    .line-bule{
+        height: 25px;
+        background-color: white;
+        border: none;
+        width: 1px;
     }
-    
-    .station:hover .social-icon:nth-child(2) {
-        animation: show-icon 0.3s forwards 0.1s; /* Instagram icon */
+    .bule-text{
+        color: white;
+
     }
-    
-    @keyframes show-icon {
-        from {
-            opacity: 0;
-            transform: translateY(20px);
-        }
-        to {
-            opacity: 1;
-            transform: translateY(0);
-        }
-    }
-    @media (max-width:453px) {
-        .icons-container {
-            left: 10px; 
-            
-        }
-    }
-    @media (max-width:1028px) {
-        .social-icon {
-            opacity: 1;
-        }
-        .social-icon {
-            width: 45px;
-           
-        }
-        .main-icon {
-            width: 45px;
-          
-        }
-       
-    }
+}
     
     
     
   
 
     
-    
-    .enquiry-container{
-        color: white;
-        position: fixed; /* Fixes the element relative to the viewport */
-        top: 30vh; /* Optional: Ensures it starts from the top of the viewport */
-        right: 0px; /* Optional: Ensures it starts from the left of the viewport */
-        display: flex;
-        justify-content: left;
-        align-items: center; 
-        cursor: pointer;
-       
-    }
-    
-    .state{
-        background-color: rgb(255, 255, 255);
-        padding: 4px;
-        justify-content: center;
-        align-items: center;
-        display: flex;
-        border-radius: 10px;
-        transition: background-color 0.5s ease; /* Smooth transition effect */
-    }
-    .state:hover {
-        background-color: rgb(0, 0, 0); /* Change this to your desired hover color */
-    }
+.enquiry-container{
+    color: white;
+    position: fixed; /* Fixes the element relative to the viewport */
+   /* Optional: Ensures it starts from the left of the viewport */
+    display: flex;
+    justify-content: left;
+    align-items: center; 
+    cursor: pointer;
    
+}
+.enquiry-trigger{
+    position: fixed;
+    top: 45vh; /* Optional: Ensures it starts from the top of the viewport */
+    right: 0px; 
+    transform: translateY(-50%);
+    background-color: white;
+    color: rgb(5, 14, 109);
+    padding: 10px 10px;
+    border-radius: 10px 10px;
+    writing-mode: vertical-rl;
+    /* text-orientation: upright; */
+    font-family: Arial, sans-serif; /* Customize font */
+    font-size: 25px; /* Adjust font size */
+    font-weight: bold; /* Adjust font weight */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Optional shadow */
+    cursor: pointer;
+    border: none;
+    transition: all 0.3s ease;
+    border:2px solid rgb(5, 14, 109);
+}
+.enquiry-trigger:hover {
+    background-color: rgb(5, 14, 109);
+    color:white ;
+    border: 2px solid rgb(255, 255, 255);
+}
+
+.state{
+    background-color: rgb(255, 255, 255);
+    padding: 4px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    border-radius: 10px;
+    transition: background-color 0.5s ease; /* Smooth transition effect */
+}
+.state:hover {
+    background-color: rgb(0, 0, 0); /* Change this to your desired hover color */
+}
+
+
+
+
 .enquiry-popup {
     display: none; /* Hidden by default */
     position: fixed;
-    top: 5%;
+    top: 6%;
     right: 1%;
     transform: translateX(100%); /* Start off the screen */
    
@@ -5636,7 +5714,7 @@ margin-top: 10px;
     cursor: pointer;
     margin-top: 10px;
     margin-bottom: 10px;
-    color: black;
+    color: #000;
   }
 
 .form-button:hover {
@@ -5660,27 +5738,32 @@ margin-top: 10px;
     font-size: 20px;
     background: none;
     border: 2px solid black;
-    color: #fff;
+    color: #000000;
     cursor: pointer;
     justify-content: center;
     align-items: center;
     display: flex;
-    color: #000;
   }
-    @media (max-width:420px) {
-        .enquiry-popup {
-            right: 0%;
-        }
-        .range {
-            margin: 0;
-            font-size: 24px;
-            letter-spacing: -1px;
-            font-weight: bold;
-            line-height: 50px;
-            margin-top: 15px;
-          }
-          .form-button {
- 
-            color: black;
-          }
+.close-btn12 {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    background: none;
+    border: 2px solid black;
+    color: #000000;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+
+@media (max-width:503px) {
+    .enquiry-popup {
+        right: 0%;
     }
+    .enquiry-trigger{
+        padding: 8px;
+        font-size: 18px; 
+    }
+}
