--- a/styles.css
+++ b/styles.css
@@ -218,15 +218,30 @@ color: white;
 }
 .creation{
 font-family: 'Inter';
-font-size: 100.8px;
+font-size: 75.8px;
 font-weight: 700;
-line-height: 100.8px;
-letter-spacing: -5.2px;
+line-height: 75.8px;
+letter-spacing: -0.2px;
 color: #FFFFFF;
 width: 90%;
 text-align: center;
 margin-top: 2rem;
 
+}
+.subheading{
+    font-size: 36.8px;
+    line-height: 50.8px;
+    color: white;
+    margin-top:2rem ;
+    margin-bottom: 1rem;
+    width: 90%;
+    text-align: center;
+}
+.big1{
+    font-size: 100px;
+font-weight: 800;
+line-height: 100px;
+color:#b35f00;
 }
 .two-btn-sec1{
     margin-top: 2rem;
@@ -239,9 +254,9 @@ margin-top: 2rem;
 .btn-two-sec1 {
     background-color: #007bff;
     color: #fff;
-    padding: 12px 30px;
+    padding: 15px 30px;
     border: none;
-    border-radius: 20px;
+    border-radius: 25px;
     font-size: 16px;
     cursor: pointer;
     display: inline-block;
@@ -452,6 +467,18 @@ color: #000000;
     transition: transform 0.3s ease;
 }
 
+
+.custom-select input::-webkit-datetime-edit::before {
+    content: attr(placeholder);
+    color: #cf1919;
+    font-style: italic;
+  }
+  
+  .custom-select input:focus::-webkit-datetime-edit::before {
+    content: "";
+    color: #0ef0da;
+  }
+  
 
   
  
@@ -689,12 +716,18 @@ color: #000000;
     display: none;
   }
   @media (max-width: 1268px) {
-    .creation{
-        font-size: 70.8px;
+    /* .creation{
+        font-size: 60.8px;
         line-height: 70.8px;
-        letter-spacing: -3.2px;
-        width: 911px;
+        letter-spacing: -2.2px;
+    
        
+        } */
+        .big1{
+            font-size: 70px;
+        font-weight: 800;
+        line-height: 70px;
+      
         }
   } 
 @media (max-width: 1138px) {
@@ -729,6 +762,49 @@ color: #000000;
         width: 95%;
       }
 }
+@media (max-width: 968px) {
+    /* .creation{
+        font-size: 40.8px;
+        line-height: 50.8px;
+        letter-spacing: -2.2px;
+      
+       
+        } */
+        .creation{
+            font-family: 'Inter';
+            font-size: 55.8px;
+            font-weight: 700;
+            line-height: 55.8px;
+            letter-spacing: -0.2px;
+            color: #FFFFFF;
+            width: 90%;
+            text-align: center;
+            margin-top: 2rem;
+            
+            }
+            .subheading{
+                font-size: 26.8px;
+                line-height: 30.8px;
+                color: white;
+                margin-top:2rem ;
+                margin-bottom: 1rem;
+                width: 90%;
+                text-align: center;
+            }
+            .big1{
+                font-size: 70px;
+            font-weight: 800;
+            line-height: 70px;
+            color:#b35f00;
+            }
+/*     
+        .big1{
+            font-size: 50px;
+        font-weight: 800;
+        line-height: 50px;
+      
+        } */
+  } 
 @media (max-width: 900px) {
     .stats-container {
         width: 80%;
@@ -761,12 +837,7 @@ color: #000000;
       }
 }
 @media (max-width: 860px) {
-    .creation{
-       
-        font-size: 70.8px;
-        line-height: 70.8px;
-        letter-spacing: -4.2px;
-        }
+  
         .friendly{
            
             font-size: 18.6px;
@@ -786,23 +857,44 @@ color: #000000;
             display: none;
         }
 }
-@media (max-width: 722px) {
 
 
     .two-btn-sec1{
         margin-bottom: 1rem;
     }
-    .creation{
-       
-        font-size: 42.8px;
-        line-height: 42.8px;
-        letter-spacing: -0.2px;
-        }
+   
         .two-btn{
             margin-bottom: 2rem;
         }
-}
+
 @media (max-width: 722px) {
+    .creation{
+        font-family: 'Inter';
+        font-size: 35.8px;
+        font-weight: 700;
+        line-height: 45.8px;
+        letter-spacing: -0px;
+        color: #FFFFFF;
+        width: 90%;
+        text-align: center;
+        margin-top: 2rem;
+        
+        }
+        .subheading{
+            font-size: 20.8px;
+            line-height: 30.8px;
+            color: white;
+            margin-top:1rem ;
+            margin-bottom: 1rem;
+            width: 90%;
+            text-align: center;
+        }
+        .big1{
+            font-size: 40px;
+        font-weight: 800;
+        line-height: 40px;
+        color:#b35f00;
+        }
     .formcontainer{
         background-color: #FFFFFF26;
         display: none;
@@ -864,12 +956,12 @@ display: block;
       .btn-two-sec1:hover {
         background-color: #0056b3;
       }
-    .creation{
+    /* .creation{
        
         font-size: 42.8px;
         line-height: 42.8px;
         letter-spacing: -0.2px;
-        }
+        } */
         .friendly{
             font-size: 12.6px;
             line-height: 25.56px;
@@ -918,20 +1010,58 @@ display: block;
           
 }
 @media (max-width: 476px) {
-    .creation{
+   
+        /* .creation{
+            font-size: 22.8px;
+            line-height: 30.8px;
+            letter-spacing: -0.2px;
+            
+           
+            } */
+            .big1{
+                font-size: 40px;
+            font-weight: 800;
+            line-height: 40px;
+          
+            }
        
-        font-size: 32.8px;
-        line-height: 36.8px;
-        letter-spacing: -0.2px;
+}
+@media (max-width: 436px) {
+    .creation{
+        font-family: 'Inter';
+        font-size: 25.8px;
+        font-weight: 700;
+        line-height: 35.8px;
+        letter-spacing: -0px;
+        color: #FFFFFF;
+        width: 90%;
+        text-align: center;
+        margin-top: 2rem;
+        
+        }
+        .subheading{
+            font-size: 16.8px;
+            line-height: 25.8px;
+            color: white;
+            margin-top:1rem ;
+            margin-bottom: 1rem;
+            width: 90%;
+            text-align: center;
+        }
+        .big1{
+            font-size: 30px;
+        font-weight: 800;
+        line-height: 30px;
+        color:#b35f00;
         }
 }
 @media (max-width: 363px) {
-    .creation{
+    /* .creation{
        
         font-size: 26.8px;
         line-height: 30.8px;
         letter-spacing: -0.2px;
-        }
+        } */
 }
 @media (max-width: 349px) {
     .friendly{
@@ -3943,11 +4073,11 @@ color: #000;
     font-weight: 500;
     }
     .answer{
-    font-size: 18px;
-    line-height: 30px;
-    color: #AAACB6;
-    padding-top: 10px;
-    display: none;
+        font-size: 18px;
+        line-height: 25px;
+        color: #666668;
+        padding-top: 10px;
+        display: none;
     }
     
     
@@ -5525,32 +5655,31 @@ margin-top: 10px;
     cursor: pointer;
    
 }
-.enquiry-trigger{
+.enquiry-trigger {
     position: fixed;
     top: 45vh; /* Optional: Ensures it starts from the top of the viewport */
     right: 0px; 
     transform: translateY(-50%);
     background-color: white;
-    color: rgb(5, 14, 109);
+    color: black;
     padding: 10px 10px;
     border-radius: 10px 10px;
     writing-mode: vertical-rl;
-    /* text-orientation: upright; */
     font-family: Arial, sans-serif; /* Customize font */
     font-size: 25px; /* Adjust font size */
     font-weight: bold; /* Adjust font weight */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Optional shadow */
     cursor: pointer;
     border: none;
-    transition: all 0.3s ease;
-    border:2px solid rgb(5, 14, 109);
-}
-.enquiry-trigger:hover {
-    background-color: rgb(5, 14, 109);
-    color:white ;
-    border: 2px solid rgb(255, 255, 255);
+
+    transition: all 0.3s ease; /* Smooth transition */
 }
 
+/* Hover effect */
+.enquiry-trigger:hover {
+    transform: translateY(-50%) scale(1.1); /* Zoom in slightly */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Enhance shadow for effect */
+}
 .state{
     background-color: rgb(255, 255, 255);
     padding: 4px;
