--- a/styles.css
+++ b/styles.css
@@ -281,7 +281,7 @@ gap: 10px;
     line-height: 34.56px;
     letter-spacing: -0.72px;
     color: #E3E3E3;
-
+width: 80%;
     text-align: center;
     margin-top: 1rem;  
 }
